# robot-colosseum

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  DATASET.md  Dockerfile_mesa  Dockerfile_nvidia  README.md  collect_dataset.sh  collect_dataset_cluster.sh  colosseum_tasks_distribution.xlsx  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
colosseum/: __init__.py
colosseum/assets/configs/: basketball_in_hoop.yaml  close_box.yaml  close_laptop_lid.yaml  default.yaml  empty_dishwasher.yaml  get_ice_from_fridge.yaml  handle_rubbish.yaml  hockey.yaml  insert_onto_square_peg.yaml  meat_on_grill.yaml  move_hanger.yaml  multi_task_kitchen.yaml  open_drawer.yaml  place_wine_at_rack_location.yaml  put_money_in_safe.yaml  put_objects_in_bin.yaml  put_objects_in_container.yaml  reach_and_drag.yaml  scoop_with_spatula.yaml  setup_chess.yaml  slide_block_to_target.yaml  stack_cups.yaml  (+4 more)
colosseum/rlbench/: utils.py
colosseum/tools/: collect_demo.py  dataset_generator.py  task_builder.py  visualize_task.py
colosseum/variations/: background_texture.py  camera_pose.py  const.py  distractor_object.py  light_color.py  manager.py  object_color.py  object_friction.py  object_mass.py  object_size.py  object_texture.py  table_color.py  table_texture.py  utils.py  variation.py
docs/: make.bat  requirements.txt
docs/source/: conf.py  index.rst  installation.rst  overview.rst  quickstart.rst  references.bib
examples/: example_object_color_variation.ipynb  example_object_size_variation.ipynb
resources/: installation.md
(+137 files in other folders)
