[metadata]
name = colosseum
version = 0.6.4
description = A Benchmark for Evaluating Generalization for Robotic Manipulation
long_description = file: README.md
long_description_content_type = text/markdown
author = Frodo Baggins
author_email = robo.frodo.baggins@gmail.com
license = MIT License
url = https://github.com/robot-colosseum/robot-colosseum

[options]
packages = find:
python_requires = >=3.8

[flake8]
exclude =
    .git,
    __pycache__,
    build,
    dist,
    docs,
    venv

max-line-length = 80
